nginx-ingress-deployment-v3/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serwis-aplikacji1
  namespace: aplikacja
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1
---
apiVersion: v1
kind: Service
metadata:
  name: serwis-aplikacji2
  namespace: aplikacja
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app2
---
apiVersion: v1
kind: Service
metadata:
  name: serwis-wordpress
  namespace: aplikacja
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
