nginx-ingress-deployment-v3/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ingress
spec:
  rules:
  - host: app.dominik.com
    http:
      paths:
      - backend:
          serviceName: default-backend
          servicePort: 80
        path: /status
